--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,13 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "mgp25/instagram-php": "^2.0"
+        "mgp25/instagram-php": "^2.0",
+        "laravelcollective/html": "5.4.*",
+        "maatwebsite/excel": "~2.1.0",
+        "santigarcor/laratrust": "4.0.*",
+        "barryvdh/laravel-debugbar": "^2.4",
+        "barryvdh/laravel-dompdf": "^0.8.0",
+        "consoletvs/charts": "4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
