--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,11 @@
         "laravel/tinker": "~1.0",
         "mgp25/instagram-php": "^2.0",
         "laravelcollective/html": "5.4.*",
-        "maatwebsite/excel": "~2.1.0",
-        "santigarcor/laratrust": "4.0.*",
         "barryvdh/laravel-debugbar": "^2.4",
-        "barryvdh/laravel-dompdf": "^0.8.0",
         "consoletvs/charts": "4.*"
     },
     "require-dev": {
+        "appzcoder/crud-generator": "^2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7"
