--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-debugbar": "^2.4",
+        "consoletvs/charts": "4.*",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "mgp25/instagram-php": "^2.0",
         "laravelcollective/html": "5.4.*",
-        "barryvdh/laravel-debugbar": "^2.4",
-        "consoletvs/charts": "4.*"
+        "mgp25/instagram-php": "^2.0"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^2.0",
