--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,53 @@
-APP_NAME=Hashtag
+APP_NAME="Hashtag"
 APP_ENV=local
 APP_KEY=
+
+# Debug
 APP_DEBUG=true
+APP_LOG=daily
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+# Bahasa
+APP_LOCALE=id
+APP_FALLBACK_LOCALE=id
+APP_ADDITIONAL_LOCALES=null
+
+#Database
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=hashtag
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-
+# Broadcasting
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+REDIS_HOST=redis
+REDIS_PASSWORD=
+REDIS_PORT=6379
+
+# Mail
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=co.spacemgsetos@gmail.com
+MAIL_PASSWORD=O5ma!EpAa*
+MAIL_ENCRYPTION=tls
+
+# AWS S3
+#AWS_KEY=
+#AWS_SECRET=
+#AWS_REGION=
+#AWS_BUCKET=
+
+#NOCAPTCHA_SECRET=6LfqDioUAAAAAHhEbFCFtIyJrEHFBORlvZKv8ord
+#NOCAPTCHA_SITEKEY=6LfqDioUAAAAAMI7mzuq8bu-WPDdoHWCiu5DRt7E
