--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.4",
@@ -12,7 +13,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "5.4.*",
-        "mgp25/instagram-php": "^2.0"
+        "nakukryskin/laravel-instagram-api": "^5.4@dev"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^2.0",
